# autonomous_democar_ros2

./: README.md
src/democar_core/: CMakeLists.txt  package.xml
src/democar_core/config/: democar_lqr_settings.yaml  democar_purepursuit_settings.yaml
src/democar_core/launch/: democar_lqr_dynamics.launch.py  democar_lqr_kinematics.launch.py  democar_mpc.launch.py  democar_purepursuit.launch.py
src/democar_core/src/: lqr_control_dynamics.cpp  lqr_control_kinematics.cpp  mpc_control.cpp  purePursuit.cpp
src/democar_description/: package.xml  setup.cfg  setup.py
src/democar_description/config/: democar.rviz
src/democar_description/launch/: democar_display_rviz2.launch.py  democar_gazebo.launch.py
src/democar_description/urdf/: demo_car.urdf
src/democar_telop/: CMakeLists.txt  package.xml
src/democar_telop/src/: democar_telop_keyboard.cpp  democar_telop_test.cpp
